Make memcache setup configurable

--- a/settings.py.dist
+++ b/settings.py.dist
@@ -50,3 +50,6 @@ NFDUMP_ENABLE = False
 NFQUERY_HOST = 'nfexample.example.com'
 NFQUERY_PORT = 1234
 NFQUERY_TIMEOUT = 10
+
+MEMCACHE_SERVER_ADDR = '127.0.0.1'
+MEMCACHE_SERVER_PORT = 11211
